
  * make the release-upgrader auto selection for the frontend
    more robust when no DISPLAY is avaiable
  * Janitor/computerjanitor/package_cruft.py:
    - use unicode string here (thanks to liw)
  * data/glade/UpdateManager.ui:
    - fix duplicated symbol (LP: #417301)
  * UpdateManager/UpdateManager.py:
    - show the on-battery warning on first map only (LP: #416067)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 18 Aug 2009 08:24:23 +0200

update-manager (1:0.124.7) karmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - recalulcate the heading label size dynamically
      to work around bugzilla #101968 (thanks to
      Juergen Kazmirzak for the patch)
  * UpdateManager/backend/__init__.py:
    - fix incomplete check for aptdaemon
  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - update for latest aptdaemon
  * DistUpgrade/DistUpgradeController.py:
    - merge fixes from Brian Murray (thanks!), LP: #404274

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Aug 2009 16:34:42 +0200

update-manager (1:0.124.6) karmic; urgency=low

  [ Oliver Grawert ]
  * DistUpgrade/DistUpgradeQuirks.py: add check for ARMv6 or 
    greater to prevent jaunty->karmic upgrades on unsupported 
    armel CPU arches

  [ Michael Vogt ]
  * UpdateManager/SimpleGtkbuilderApp.py:
    - updated to deal with widgets that overwrite get_name
  * update-manager:
    - add "--data-dir" switch
  * use aptdaemon as the install backend (if avaialble)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Jul 2009 15:49:09 +0200

update-manager (1:0.124.5) karmic; urgency=low

  * debian/update-manager-core.links: change the update-motd link for
    release_upgrade to match other links (- instead of _), and move it
    to 91 (just after updates-available at 90), such that it's printed
    toward the end of the MOTD, rather than at 10, which is the beginning.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Jul 2009 17:41:04 -0500
