@@ -8,6 +8,9 @@ update-manager (1:0.124.8) UNRELEASEDkarmic; urgency=low
     - fix duplicated symbol (LP: #417301)
   * UpdateManager/UpdateManager.py:
     - show the on-battery warning on first map only (LP: #416067)
+  * DistUpgrade/DistUpgradeController.py:
+    - do not how a error when the upgrade is canceled by the user
+      during download
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 18 Aug 2009 08:24:23 +0200
 
